k8s/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-dashboard
  namespace: ${KUBE_NAMESPACE}
  labels:
    app: payment-dashboard
spec:
  type: NodePort
  ports:
  - name: api
    port: 80
    targetPort: api
  selector:
    app: payment-dashboard
